--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 [[bin]]
 name = "oqab"
 path = "src/main.rs"
+
+[dependencies]
+tokio = { version = "1.32", features = ["full"] }
+walkdir = "2.4"
+futures = "0.3"
+thiserror = "1.0"
+chrono = "0.4"
