--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,18 @@ edition = "2024"
 
 [dependencies]
 rayon = "1.8.1"
+tokio = { version = "1.35.1", features = ["full"] }
+futures = "0.3.30"
+crossbeam = "0.8.4"
+dashmap = "5.5.3"
+num_cpus = "1.16.0"
+walkdir = "2.4.0"
+ignore = "0.4.22"
 
 [dev-dependencies]
 tempfile = "3.10.0"
+criterion = "0.5.1"
+
+[[bench]]
+name = "file_finder_benchmark"
+harness = false
