--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,14 @@ dashmap = "5.5.3"
 num_cpus = "1.16.0"
 walkdir = "2.4.0"
 ignore = "0.4.22"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = { version = "4.4", features = ["derive"] }
+config = "0.13"
+log = "0.4"
+env_logger = "0.10"
+anyhow = "1.0"
+thiserror = "1.0"
 
 [dev-dependencies]
 tempfile = "3.10.0"
