--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "1.0"
 [dev-dependencies]
 tempfile = "3.10.0"
 criterion = "0.5.1"
+chrono = "0.4"
 
 [[bench]]
 name = "file_finder_benchmark"
