--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2024"
 rayon = "1.8.1"
 tokio = { version = "1.35.1", features = ["full"] }
 futures = "0.3.30"
-crossbeam = "0.8.4"
-dashmap = "5.5.3"
-num_cpus = "1.16.0"
+crossbeam = "0.8"
+dashmap = "5.5"
+num_cpus = "1.16"
 walkdir = "2.4.0"
 ignore = "0.4.22"
 serde = { version = "1.0", features = ["derive"] }
@@ -20,6 +20,10 @@ log = "0.4"
 env_logger = "0.10"
 anyhow = "1.0"
 thiserror = "1.0"
+console = "0.15"
+once_cell = "1.19"
+parking_lot = "0.12"
+regex = "1.10"
 
 [dev-dependencies]
 tempfile = "3.10.0"
