--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ parking_lot = "0.12"
 regex = "1.10"
 chrono = "0.4"
 dirs = "5.0"
+fuzzy-matcher = "0.3.7"
 
 [dev-dependencies]
 tempfile = "3.10.0"
